--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
@@ -151,16 +151,16 @@
 
 				<div style="display: flex; align-items: center; padding: 5px; text-align: left; justify-content: left;">
 					<div style="margin-right: 20px;">
-						<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="max-width: 20px; max-height: 20px;" alt="DRM" />
+						<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="max-width: 20px; max-height: 20px;" alt="DRM" loading="lazy" />
 					</div>
 					<div style="margin-right: 20px;">
-						<img src="@iconoTienda" style="width: 20px; height: 20px;" alt="Store" />
+						<img src="@iconoTienda" style="width: 20px; height: 20px;" alt="Store" loading="lazy" />
 					</div>
 
 					@if (string.IsNullOrEmpty(tooltip.ReviewsIcono) == false)
 					{
 						<div style="margin-right: 20px;">
-							<img src="@tooltip.ReviewsIcono" style="width: 20px; height: 20px;" alt="Reviews" />
+							<img src="@tooltip.ReviewsIcono" style="width: 20px; height: 20px;" alt="Reviews" loading="lazy" />
 						</div>
 					}
 
@@ -244,15 +244,15 @@
 			<a class="boton-pequeño" style="padding: 0px; @fondoColor" href="@enlace" target="@enlaceNuevaPestaña">
 				<div class="perfil-flexible-centrado">
 					<div style="max-width: 230px;">
-						<img src="@juego.Imagenes.Header_460x215" style="width: 100%; height: 100%;" alt="@juego.Nombre" />
+						<img src="@juego.Imagenes.Header_460x215" style="width: 100%; height: 100%;" alt="@juego.Nombre" loading="lazy" />
 					</div>
 
 					<div class="cjuego-titulo" style="width: 100%; display: flex; flex-flow: column wrap;">
 						<div class="minimo-fuente">@juego.Nombre</div>
 
 						<div style="margin-top: 15px; display: flex; align-items: center;">
-							<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="width: 16px; height: 16px; margin-right: 10px;" alt="DRM" />
-							<img src="@iconoTienda" style="width: 16px; height: 16px; margin-right: 10px;" alt="Store" />
+							<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="width: 16px; height: 16px; margin-right: 10px;" alt="DRM" loading="lazy" />
+							<img src="@iconoTienda" style="width: 16px; height: 16px; margin-right: 10px;" alt="Store" loading="lazy" />
 							<div class="cjuego-fecha">@Herramientas.Calculadora.DiferenciaTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma)</div>
 						</div>
 					</div>
@@ -275,7 +275,7 @@
 			<a class="boton-pequeño" style="padding: 0px; @fondoColor" href="@enlace" target="@enlaceNuevaPestaña">
 				<div class="perfil-flexible-centrado">
 					<div style="max-width: 230px;">
-						<img src="@juego.Imagenes.Header_460x215" style="width: 100%; height: 100%;" />
+						<img src="@juego.Imagenes.Header_460x215" style="width: 100%; height: 100%;" loading="lazy" />
 					</div>
 
 					<div style="width: 100%; display: flex; flex-flow: column wrap; padding: 10px 20px;">
@@ -283,11 +283,11 @@
 
 						<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
 							<div style="width: 20px; height: 20px;">
-								<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="width: 100%; height: 100%;" />
+								<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="width: 100%; height: 100%;" loading="lazy" />
 							</div>
 
 							<div style="width: 20px; height: 20px; margin-left: 10px;">
-								<img src="@iconoTienda" style="width: 100%; height: 100%;" />
+								<img src="@iconoTienda" style="width: 100%; height: 100%;" loading="lazy" />
 							</div>
 
 							@if (juego.Analisis != null)
@@ -297,21 +297,21 @@
 									if (int.Parse(juego.Analisis.Porcentaje) > 74)
 									{
 										<div style="width: 20px; height: 20px; margin-left: 10px;">
-											<img src="/imagenes/analisis/positive.webp" style="width: 100%; height: 100%;" />
+											<img src="/imagenes/analisis/positive.webp" style="width: 100%; height: 100%;" loading="lazy" />
 										</div>
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
 									{
 										<div style="width: 20px; height: 20px; margin-left: 10px;">
-											<img src="/imagenes/analisis/mixed.webp" style="width: 100%; height: 100%;" />
+											<img src="/imagenes/analisis/mixed.webp" style="width: 100%; height: 100%;" loading="lazy" />
 										</div>
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) < 50)
 									{
 										<div style="width: 20px; height: 20px; margin-left: 10px;">
-											<img src="/imagenes/analisis/negative.webp" style="width: 100%; height: 100%;" />
+											<img src="/imagenes/analisis/negative.webp" style="width: 100%; height: 100%;" loading="lazy" />
 										</div>
 									}
 								}
