--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -120,6 +120,22 @@
     </div>
 </div>
 
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
+    <div>
+        Extensión para navegadores web
+    </div>
+
+    <div style="display: flex; align-items: center; gap: 20px; margin-top: 20px;">
+        <div>
+            <a class="boton-pequeño" href="https://chrome.google.com/webstore/devconsole/231700b4-7712-4074-a146-96dd5002493e" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Chrome</a>
+        </div>
+
+        <div>
+            <a class="boton-pequeño" href="https://addons.mozilla.org/developers/addons" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Firefox</a>
+        </div>
+    </div>
+</div>
+
 @code {
 
     [Parameter]
