--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -792,6 +792,7 @@ select {
     fill: var(--colorTexto);
     width: 100%;
     height: 100%;
+    transition: transform .2s;
 }
 
     .svg-boton:hover {
