--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 
-			<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo, usuarioPatreon)" class="boton-pequeño" style="text-align: center; padding: 10px 15px;" target="_blank">
+			<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo, usuarioPatreon)" class="boton-pequeño" style="text-align: center; padding: 10px 15px; font-size: 18px;" target="_blank">
 				@Herramientas.Idiomas.BuscarTexto(idioma, "Open", "Bundle")
 			</a>
 		</div>
@@ -61,9 +61,11 @@
 
 	if (tipo == Tipo.Noticia)
 	{
-		<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo, usuarioPatreon)" class="boton-pequeño" style="text-align: center; padding: 15px 20px; font-size: 18px; margin-bottom: 20px;" target="_blank">
-			@Herramientas.Idiomas.BuscarTexto(idioma, "Open", "Bundle")
-		</a>
+		<div style="position: sticky; top: var(--alturaCabecera); z-index: 1000; width: 100%;">
+			<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo, usuarioPatreon)" class="boton-pequeño" style="text-align: center; padding: 15px 20px; font-size: 18px; margin-bottom: 20px;" target="_blank">
+				@Herramientas.Idiomas.BuscarTexto(idioma, "Open", "Bundle")
+			</a>
+		</div>
 	}
 
 	if (bundle.Tiers != null)
@@ -86,28 +88,120 @@
 					}
 				}
 
-				<div class="perfil" style="padding: 0px; background-color: transparent; @marginFinal">
-					@{
-						List<Bundles2.BundleJuego> juegosTier = new List<Bundles2.BundleJuego>();
+				List<Bundles2.BundleJuego> juegosTier = new List<Bundles2.BundleJuego>();
 
-						foreach (var juego in bundle.Juegos)
+				foreach (var juego in bundle.Juegos)
+				{
+					if (juego.Tier != null)
+					{
+						if (juego.Tier.Posicion == tier.Posicion)
 						{
-							if (juego.Tier != null)
+							juegosTier.Add(juego);
+						}
+					}
+				}
+
+				if (juegosTier.Count > 0)
+				{
+					juegosTier = juegosTier.OrderBy(x => x.Nombre).ToList();
+				}
+
+				foreach (var juego in juegosTier)
+				{
+					if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
+					{
+						if (string.IsNullOrEmpty(juego.Juego.Maestro) == false)
+						{
+							if (juego.Juego.Maestro != "no")
 							{
-								if (juego.Tier.Posicion == tier.Posicion)
+								foreach (var juego2 in juegosTier)
 								{
-									juegosTier.Add(juego);
+									if (juego2.JuegoId == juego.Juego.Maestro)
+									{
+										if (juego2.DLCs == null)
+										{
+											juego2.DLCs = new List<string>();
+										}
+
+										bool añadir = true;
+
+										if (juego2.DLCs.Count > 0)
+										{
+											foreach (var dlc in juego2.DLCs)
+											{
+												if (dlc == juego.JuegoId)
+												{
+													añadir = false;
+													break;
+												}
+											}
+										}
+
+										if (añadir == true)
+										{
+											juego2.DLCs.Add(juego.JuegoId);
+										}
+									}
 								}
 							}
 						}
+					}
+				}
 
-						if (juegosTier.Count > 0)
+				@if (bundle.Pick == true)
+				{
+					<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; font-size: 18px; display: flex; align-items: center; flex-direction: row; gap: 40px; justify-content: center; margin-bottom: 30px;">
+						@foreach (var tier2 in OrdenarTiers(bundle.Tiers))
 						{
-							juegosTier = juegosTier.OrderBy(x => x.Nombre).ToList();
+							<div style="text-align: center; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 15px 30px;">
+								@if (tier2.CantidadJuegos == 1)
+								{
+									<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.BuscarTexto(idioma, "String21", "Bundle") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label>
+								}
+								else if (tier2.CantidadJuegos > 1)
+								{
+									<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.BuscarTexto(idioma, "String8", "Bundle") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label> <label>/</label> <label style="font-size: 14px;">@ArreglarPrecio(decimal.Parse(tier2.Precio) / tier2.CantidadJuegos) (@Herramientas.Idiomas.BuscarTexto(idioma, "String20", "Bundle"))</label>
+								}
+							</div>
 						}
+					</div>
+				}
 
-						foreach (var juego in juegosTier)
+				<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; margin-bottom: 30px;">
+					@if (bundle.Pick == false)
+					{
+						<div style="font-size: 18px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px; margin-bottom: 30px;">
+							<div style="margin-bottom: 5px;">
+								Tier @tier.Posicion: @ArreglarPrecio(decimal.Parse(tier.Precio))
+							</div>
+
+							@foreach (var juego in juegosTier)
+							{
+								if (juego.Juego.PrecioMinimosHistoricos != null)
+								{
+									foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
+									{
+										if (historico.DRM == juego.DRM)
+										{
+											totalMinimos = totalMinimos + historico.Precio;
+
+											break;
+										}
+									}
+								}
+							}
+
+							<div style="font-size: 14px;">
+								@Herramientas.Idiomas.BuscarTexto(idioma, "String14", "Bundle"): @ArreglarPrecio(totalMinimos)
+							</div>
+						</div>
+					}
+
+					<div class="bundle-tabla" style="display: grid; grid-gap: 30px; margin-top: 10px;">
+						@foreach (var juego in juegosTier)
 						{
+							bool mostrar = true;
+
 							if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
 							{
 								if (string.IsNullOrEmpty(juego.Juego.Maestro) == false)
@@ -118,205 +212,110 @@
 										{
 											if (juego2.JuegoId == juego.Juego.Maestro)
 											{
-												if (juego2.DLCs == null)
-												{
-													juego2.DLCs = new List<string>();
-												}
-
-												bool añadir = true;
-
-												if (juego2.DLCs.Count > 0)
-												{
-													foreach (var dlc in juego2.DLCs)
-													{
-														if (dlc == juego.JuegoId)
-														{
-															añadir = false;
-															break;
-														}
-													}
-												}
-
-												if (añadir == true)
-												{
-													juego2.DLCs.Add(juego.JuegoId);
-												}
+												mostrar = false;
 											}
 										}
 									}
 								}
 							}
-						}
 
-						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
-							@if (bundle.Pick == true)
+							if (mostrar == true)
 							{
-								<div style="font-size: 18px; display: flex; align-items: center; flex-direction: row; gap: 40px; justify-content: center; margin-bottom: 30px;">
-									@foreach (var tier2 in OrdenarTiers(bundle.Tiers))
-									{
-										<div style="text-align: center; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 15px 30px;">
-											@if (tier2.CantidadJuegos == 1)
-											{
-												<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.BuscarTexto(idioma, "String21", "Bundle") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label>
-											}
-											else if (tier2.CantidadJuegos > 1)
-											{
-												<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.BuscarTexto(idioma, "String8", "Bundle") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label> <label>/</label> <label style="font-size: 14px;">@ArreglarPrecio(decimal.Parse(tier2.Precio) / tier2.CantidadJuegos) (@Herramientas.Idiomas.BuscarTexto(idioma, "String20", "Bundle"))</label>
-											}										
-										</div>
-									}
-								</div>
-							}
-							else
-							{
-								<div style="font-size: 18px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px; margin-bottom: 30px;">
-									<div style="margin-bottom: 5px;">
-										Tier @tier.Posicion: @ArreglarPrecio(decimal.Parse(tier.Precio))
-									</div>
+								bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego.Juego, juego.DRM);
+								bool usuarioTieneDeseado = false;
 
-									@foreach (var juego in juegosTier)
-									{
-										if (juego.Juego.PrecioMinimosHistoricos != null)
-										{
-											foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
-											{
-												if (historico.DRM == juego.DRM)
-												{
-													totalMinimos = totalMinimos + historico.Precio;
+								string fondoColor = string.Empty;
 
-													break;
-												}
-											}
-										}
-									}
-
-									<div style="font-size: 14px;">
-										@Herramientas.Idiomas.BuscarTexto(idioma, "String14", "Bundle"): @ArreglarPrecio(totalMinimos)
-									</div>
-								</div>
-							}
-
-							<div class="bundle-tabla" style="display: grid; grid-gap: 30px; margin-top: 10px;">
-								@foreach (var juego in juegosTier)
+								if (usuarioTieneJuego == true)
 								{
-									bool mostrar = true;
+									fondoColor = "background-color: var(--fondoBien);";
+								}
+								else
+								{
+									usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juego.Juego, juego.DRM);
 
-									if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
+									if (usuarioTieneDeseado == true)
 									{
-										if (string.IsNullOrEmpty(juego.Juego.Maestro) == false)
+										fondoColor = "background-color: var(--fondoAlerta);";
+									}
+								}
+
+								bool usuarioConectado = false;
+
+								if (usuario != null)
+								{
+									usuarioConectado = true;
+								}
+
+																<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
+																	<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno" style="max-width: 460px; padding: 10px; font-size: 14px;">
+																		<div>@Herramientas.Idiomas.BuscarTexto(idioma, "Tooltip", "Bundle")</div>
+
+																		<div style="margin-top: 5px;">@Herramientas.Idiomas.BuscarTexto(idioma, "Tooltip2", "Bundle")</div>
+																	</div>
+
+									@{
+										List<string> dlcs = new List<string>();
+
+										if (juego.DLCs != null)
 										{
-											if (juego.Juego.Maestro != "no")
+											if (juego.DLCs.Count > 0)
 											{
-												foreach (var juego2 in juegosTier)
-												{
-													if (juego2.JuegoId == juego.Juego.Maestro)
-													{
-														mostrar = false;
-													}
-												}
+												dlcs = juego.DLCs;
 											}
 										}
 									}
 
-									if (mostrar == true)
-									{
-										bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego.Juego, juego.DRM);
-										bool usuarioTieneDeseado = false;
+																	<button @onclick="(e => AbrirJuego(e, juego.Juego, dlcs, Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado)))" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
+																		<div style="padding: 0px;">
+																			<div style="text-align: center;">
+																				<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
+																			</div>
 
-										string fondoColor = string.Empty;
+																			<div style="display: flex; align-items: center;">
+																				<div style="display: flex; align-items: center; gap: 15px; padding: 15px; width: 100%;">
+																					<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 20px; max-height: 20px;" />
 
-										if (usuarioTieneJuego == true)
-										{
-											fondoColor = "background-color: var(--fondoBien);";
-										}
-										else
-										{
-											usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juego.Juego, juego.DRM);
+													@if (juego.Juego.PrecioMinimosHistoricos != null)
+													{
+														foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
+														{
+															if (historico.DRM == juego.DRM)
+															{
+																											<div style="text-align: center; font-size: 14px;">
+																	@Herramientas.Idiomas.BuscarTexto(idioma, "Game1", "Bundle"): @ArreglarPrecio(historico.Precio)
+																											</div>
 
-											if (usuarioTieneDeseado == true)
-											{
-												fondoColor = "background-color: var(--fondoAlerta);";
-											}
-										}
+																break;
+															}
+														}
+													}	
+																				</div>
 
-										bool usuarioConectado = false;
-
-										if (usuario != null)
-										{
-											usuarioConectado = true;
-										}
-
-										<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
-											<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno" style="max-width: 460px; padding: 10px; font-size: 14px;">
-												<div>@Herramientas.Idiomas.BuscarTexto(idioma, "Tooltip", "Bundle")</div>
-
-												<div style="margin-top: 5px;">@Herramientas.Idiomas.BuscarTexto(idioma, "Tooltip2", "Bundle")</div>
-											</div>
-
-											@{
-												List<string> dlcs = new List<string>();
-
-												if (juego.DLCs != null)
+												@if (juego.DLCs != null)
 												{
 													if (juego.DLCs.Count > 0)
 													{
-														dlcs = juego.DLCs;
+																								<div style="background-color: var(--fondoDlc); font-size: 14px; padding: 15px 10px; width: 42%;">
+															@if (juego.DLCs.Count == 1)
+															{
+																@("+" + Herramientas.Idiomas.BuscarTexto(idioma, "DLCs1", "Bundle"))
+															}
+															else if (juego.DLCs.Count > 1)
+															{
+																@string.Format("+ " + Herramientas.Idiomas.BuscarTexto(idioma, "DLCs2", "Bundle"), juego.DLCs.Count)
+															}
+																								</div>
 													}
 												}
-											}
-
-											<button @onclick="(e => AbrirJuego(e, juego.Juego, dlcs, Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado)))" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
-												<div style="padding: 0px;">
-													<div style="text-align: center;">
-														<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
-													</div>
-
-													<div style="display: flex; align-items: center;">
-														<div style="display: flex; align-items: center; gap: 15px; padding: 15px; width: 100%;">
-															<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 20px; max-height: 20px;" />
-
-															@if (juego.Juego.PrecioMinimosHistoricos != null)
-															{
-																foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
-																{
-																	if (historico.DRM == juego.DRM)
-																	{
-																		<div style="text-align: center; font-size: 14px;">
-																			@Herramientas.Idiomas.BuscarTexto(idioma, "Game1", "Bundle"): @ArreglarPrecio(historico.Precio)
+																			</div>
 																		</div>
-
-																		break;
-																	}
-																}
-															}	
-														</div>
-
-														@if (juego.DLCs != null)
-														{
-															if (juego.DLCs.Count > 0)
-															{
-																<div style="background-color: var(--fondoDlc); font-size: 14px; padding: 15px 10px; width: 42%;">
-																	@if (juego.DLCs.Count == 1)
-																	{
-																		@("+" + Herramientas.Idiomas.BuscarTexto(idioma, "DLCs1", "Bundle"))
-																	}
-																	else if (juego.DLCs.Count > 1)
-																	{
-																		@string.Format("+ " + Herramientas.Idiomas.BuscarTexto(idioma, "DLCs2", "Bundle"), juego.DLCs.Count)
-																	}
+																	</button>
 																</div>
-															}
-														}
-													</div>
-												</div>
-											</button>
+							}
+						}
+											</div>
 										</div>
-									}		
-								}
-							</div>
-						</div>
-					}
-				</div>
 
 				@if (bundle.Pick == true)
 				{
