--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaNoticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaNoticia.razor
@@ -3,7 +3,7 @@
 <style>
 	.cnoticia-expandir {
 	transition: transform .2s;
-	border: 1px solid var(--fondoMinimo);
+	border: 1px solid var(--fondoOscuro);
 	}
 
 	.cnoticia-expandir:hover {
@@ -19,42 +19,42 @@
 <div style="margin-top: 20px;">
 	<a href="/news/@noticia.Id/@Herramientas.EnlaceAdaptador.Nombre(titulo)/" style="cursor: pointer; text-decoration: none; color: var(--colorTexto);">
 		<div class="cnoticia-expandir" style="background-color: var(--fondoBotonPequeño); display: flex; align-items: center;" title="@titulo">
-			<div style="position: relative;">
+			<div>
 				<img src="@imagen" style="width: 200px; height: 110px; object-fit: cover; opacity: 0.8;" alt="@titulo" loading="lazy" />
-
-				@{
-					string icono = string.Empty;
-
-					if (noticia.Tipo == NoticiaTipo.Bundles)
-					{
-						icono = Bundles2.BundlesCargar.DevolverBundle(noticia.BundleTipo).ImagenIcono;
-					}
-					else if (noticia.Tipo == NoticiaTipo.Gratis)
-					{
-						icono = Gratis2.GratisCargar.DevolverGratis(noticia.GratisTipo).ImagenIcono;
-					}
-					else if (noticia.Tipo == NoticiaTipo.Suscripciones)
-					{
-						icono = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(noticia.SuscripcionTipo).ImagenIcono;
-					}
-					else if (noticia.Tipo == NoticiaTipo.Web)
-					{
-						icono = "/favicons/favicon-96x96.png";
-					}
-
-					if (string.IsNullOrEmpty(icono) == false)
-					{
-						<div style="position: absolute; bottom: 0; right: 0; background-color: var(--fondoBotonPequeño); padding: 0px 2px;">
-							<img src="@icono" style="width: 18px; height: 18px;" alt="@Noticias.NoticiasCargar.Traduccion(noticia.Tipo, idioma)" loading="lazy" />
-						</div>
-					}
-				}
 			</div>
 
 			<div style="padding: 10px 20px; display: flex; flex-direction: column; gap: 10px;">
 				<div style="font-size: 17px;">@titulo</div>
 
-				<div style="display: flex; align-items: center; gap: 20px;">
+				<div style="display: flex; align-items: center; gap: 15px;">
+					@{
+						string icono = string.Empty;
+
+						if (noticia.Tipo == NoticiaTipo.Bundles)
+						{
+							icono = Bundles2.BundlesCargar.DevolverBundle(noticia.BundleTipo).ImagenIcono;
+						}
+						else if (noticia.Tipo == NoticiaTipo.Gratis)
+						{
+							icono = Gratis2.GratisCargar.DevolverGratis(noticia.GratisTipo).ImagenIcono;
+						}
+						else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+						{
+							icono = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(noticia.SuscripcionTipo).ImagenIcono;
+						}
+						else if (noticia.Tipo == NoticiaTipo.Web)
+						{
+							icono = "/favicons/favicon-96x96.png";
+						}
+
+						if (string.IsNullOrEmpty(icono) == false)
+						{
+							<div>
+								<img src="@icono" style="width: 18px; height: 18px;" alt="@Noticias.NoticiasCargar.Traduccion(noticia.Tipo, idioma)" loading="lazy" />
+							</div>
+						}
+					}
+
 					<div style="font-size: 14px;">
 						@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
 					</div>
