--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -296,7 +296,7 @@
 
 												if (añadirNuevo == true)
 												{
-													<div style="position: absolute; top: -15px; right: -15px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 5px 10px; font-size: 14px;">
+													<div style="position: absolute; top: -15px; right: -15px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBoton); padding: 5px 10px; font-size: 14px;">
 														@Herramientas.Idiomas.BuscarTexto(idioma, "String24", "Bundle")
 													</div>
 												}
