--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -944,7 +944,7 @@
                                                                 if (drmG == drm.Id)
                                                                 {
                                                                     <div style="display: flex; align-items: center; justify-content: center; gap: 10px;" title="@Herramientas.Idiomas.BuscarTexto(idioma, "String71", "Game")">
-                                                                        <img src="@APIs.GeforceNOW.Streaming.Generar().ImagenIcono" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+                                                                        <img src="@APIs.GeforceNOW.Streaming.Generar().ImagenIcono" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Geforce NOW" />
                                                                     </div>
                                                                 }
                                                             }
